--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+language: generic
 sudo: required
 services:
   - docker
 before_install:
   - docker build -t ivan/react-test -f ./client/Dockerfile.dev ./client
 script:
-  - docker run ivan/react-test npm test -- --coverage
+  - docker run -e CI=true ivan/react-test npm test
 after_success:
   - docker build -t ivan/multi-client ./client
   - docker build -t ivan/multi-nginx ./nginx
