travis file docker user name change try 1

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t ivan/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t xkmd/react-test -f ./client/Dockerfile.dev ./client
 script:
-  - docker run -e CI=true ivan/react-test npm test
+  - docker run -e CI=true xkmd/react-test npm test
 after_success:
-  - docker build -t ivan/multi-client ./client
-  - docker build -t ivan/multi-nginx ./nginx
-  - docker build -t ivan/multi-server ./server
-  - docker build -t ivan/multi-worker ./worker
+  - docker build -t xkmd/multi-client ./client
+  - docker build -t xkmd/multi-nginx ./nginx
+  - docker build -t xkmd/multi-server ./server
+  - docker build -t xkmd/multi-worker ./worker
   #login to docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   #take those images and push them to docker hub
-  - docker push ivan/multi-client
-  - docker push ivan/multi-nginx
-  - docker push ivan/multi-server
-  - docker push ivan/multi-worker
+  - docker push xkmd/multi-client
+  - docker push xkmd/multi-nginx
+  - docker push xkmd/multi-server
+  - docker push xkmd/multi-worker
