--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,17 @@ after_success:
   - docker push xkmd/multi-nginx
   - docker push xkmd/multi-server
   - docker push xkmd/multi-worker
+deploy:
+  provider: elasticbeanstalk
+  region: eu-central-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-eu-central-1-458197569523
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
+
